# journal

./: SETUP-TAURI.md
.github/workflows/: build.yml
entries/: SCHEMA.md  SYSTEM.md  meeting-notes copy.md  meeting-notes.md
entries/imported-notes/: 2026-03-15 API Design Discussion.md  2026-03-22 Sprint Planning.md  2026-04-01 Quarterly Review.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/proto/: apple_notes.proto
src-tauri/src/: apple_notes.rs  lib.rs  main.rs
