[package]
name = "entries"
version = "0.1.0"
description = "A Tauri-based markdown notebook viewer"
authors = ["Marcus"]
edition = "2021"

[lib]
name = "entries_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
flate2 = "1"
prost = "0.13"
chrono = "0.4"
